Fixed bug where spacing appeared in home carousel.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -343,6 +343,7 @@ body {
   margin: 0;
   background: #02021e;
   color: white;
+  overflow-x: hidden;
 }
 
 a {
@@ -388,11 +389,11 @@ body {
   font-family: "Square";
   src: url(../fonts/Square.woff2) format("woff2");
 }
-.searchAndNomineeSection {
+.homeContentSection {
   padding: 0rem 3rem;
 }
 @media screen and (min-width: 768px) {
-  .searchAndNomineeSection {
+  .homeContentSection {
     padding: 0rem 5rem;
   }
 }
@@ -554,16 +555,15 @@ body {
 .introBanner {
   position: relative;
   width: 100vw;
-  height: 30rem;
 }
 @media screen and (min-width: 768px) {
   .introBanner {
-    height: 40rem;
+    min-height: 10rem;
   }
 }
 @media screen and (min-width: 992px) {
   .introBanner {
-    height: 50rem;
+    min-height: 10rem;
   }
 }
 .introBanner .introBannerImage {
@@ -578,73 +578,20 @@ body {
   right: 5%;
   bottom: -10%;
   animation: floatingIronMan 2s infinite alternate;
-}
-@media screen and (min-width: 520px) {
-  .introBanner .ironManImage {
-    width: 20rem;
-    height: 20rem;
-    bottom: -20%;
-  }
+  display: none;
 }
 @media screen and (min-width: 768px) {
   .introBanner .ironManImage {
-    width: 35rem;
-    height: 35rem;
+    width: 25rem;
+    height: 25rem;
+    display: block;
   }
 }
 @media screen and (min-width: 992px) {
   .introBanner .ironManImage {
     width: 35rem;
     height: 35rem;
-  }
-}
-.introBanner .introBannerTextWrap {
-  z-index: 1;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 2rem;
-  width: 50%;
-}
-@media screen and (min-width: 768px) {
-  .introBanner .introBannerTextWrap {
-    left: 5rem;
-  }
-}
-.introBanner .introBannerTextWrap .hulkImage {
-  position: absolute;
-  left: 20%;
-  width: 30%;
-  object-fit: cover;
-}
-.introBanner .introBannerTextWrap .introBannerTitle {
-  text-transform: uppercase;
-  margin-bottom: 0.5rem;
-  font-size: 3rem;
-}
-@media screen and (min-width: 520px) {
-  .introBanner .introBannerTextWrap .introBannerTitle {
-    font-size: 4rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  .introBanner .introBannerTextWrap .introBannerTitle {
-    font-size: 6rem;
-  }
-}
-.introBanner .introBannerTextWrap .introBannerTitleDesc {
-  margin: 0;
-  text-transform: uppercase;
-  font-size: 1.3rem;
-}
-@media screen and (min-width: 768px) {
-  .introBanner .introBannerTextWrap .introBannerTitleDesc {
-    font-size: 2rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  .introBanner .introBannerTextWrap .introBannerTitleDesc {
-    font-size: 2.5rem;
+    bottom: -10rem;
   }
 }
 .introBanner .modalFade {
@@ -656,6 +603,40 @@ body {
   background-color: #02021e;
   opacity: 0.4;
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0.8) 100%);
+}
+
+.introBannerTextWrap {
+  padding: 3rem 0;
+}
+.introBannerTextWrap .introBannerTitle {
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+  font-size: 3rem;
+}
+@media screen and (min-width: 520px) {
+  .introBannerTextWrap .introBannerTitle {
+    font-size: 4rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .introBannerTextWrap .introBannerTitle {
+    font-size: 6rem;
+  }
+}
+.introBannerTextWrap .introBannerTitleDesc {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+}
+@media screen and (min-width: 768px) {
+  .introBannerTextWrap .introBannerTitleDesc {
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .introBannerTextWrap .introBannerTitleDesc {
+    font-size: 2.5rem;
+  }
 }
 
 .maxNomineesBanner {
@@ -893,7 +874,8 @@ body {
 }
 .homeCarouselContainer .pictureImageWrap {
   position: relative;
-  width: 100%;
+  width: 105%;
+  left: -2%;
   height: 100%;
 }
 .homeCarouselContainer .pictureImageWrap img {
@@ -957,9 +939,19 @@ body {
 .slideImageLogo {
   width: 18rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 520px) {
   .slideImageLogo {
     width: 26rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .slideImageLogo {
+    width: 36rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .slideImageLogo {
+    width: 56rem;
   }
 }
 
