--- a/src/scss/partials/base/_elements.scss
+++ b/src/scss/partials/base/_elements.scss
@@ -3,6 +3,7 @@ body {
     // background: $background-dark;
     background: #02021e;
     color: white;
+    overflow-x: hidden;
     // background: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=1.00xw:0.669xh;0,0.190xh&resize=1200:*);
 }
 
