--- a/src/scss/partials/pages/_home.scss
+++ b/src/scss/partials/pages/_home.scss
@@ -1,4 +1,4 @@
-.searchAndNomineeSection {
+.homeContentSection {
     padding: 0rem 3rem;
     @media screen and (min-width: $md_breakpoint) {
         padding: 0rem 5rem;
@@ -146,12 +146,12 @@
     position: relative;
 
     width: 100vw;
-    height: 30rem;
+
     @media screen and (min-width: $md_breakpoint) {
-        height: 40rem;
+        min-height: 10rem;
     }
     @media screen and (min-width: $lg_breakpoint) {
-        height: 50rem;
+        min-height: 10rem;
     }
     .introBannerImage {
         width: 100%;
@@ -165,58 +165,17 @@
         right: 5%;
         bottom: -10%;
         animation: floatingIronMan 2s infinite alternate;
-        @media screen and (min-width: $sm_breakpoint) {
-            width: 20rem;
-            height: 20rem;
-            bottom: -20%;
-        }
+        display: none;
+
         @media screen and (min-width: $md_breakpoint) {
-            width: 35rem;
-            height: 35rem;
+            width: 25rem;
+            height: 25rem;
+            display: block;
         }
         @media screen and (min-width: $lg_breakpoint) {
             width: 35rem;
             height: 35rem;
-        }
-    }
-    .introBannerTextWrap {
-        z-index: 1;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 2rem;
-        width: 50%;
-        @media screen and (min-width: $md_breakpoint) {
-            left: 5rem;
-        }
-        .hulkImage {
-            position: absolute;
-            left: 20%;
-            width: 30%;
-            object-fit: cover;
-        }
-        .introBannerTitle {
-            text-transform: uppercase;
-            margin-bottom: 0.5rem;
-            font-size: 3rem;
-
-            @media screen and (min-width: $sm_breakpoint) {
-                font-size: 4rem;
-            }
-            @media screen and (min-width: $lg_breakpoint) {
-                font-size: 6rem;
-            }
-        }
-        .introBannerTitleDesc {
-            margin: 0;
-            text-transform: uppercase;
-            font-size: 1.3rem;
-            @media screen and (min-width: $md_breakpoint) {
-                font-size: 2rem;
-            }
-            @media screen and (min-width: $lg_breakpoint) {
-                font-size: 2.5rem;
-            }
+            bottom: -10rem;
         }
     }
 
@@ -239,6 +198,33 @@
     }
 }
 
+.introBannerTextWrap {
+    padding: 3rem 0;
+
+    .introBannerTitle {
+        text-transform: uppercase;
+        margin-bottom: 0.5rem;
+        font-size: 3rem;
+
+        @media screen and (min-width: $sm_breakpoint) {
+            font-size: 4rem;
+        }
+        @media screen and (min-width: $lg_breakpoint) {
+            font-size: 6rem;
+        }
+    }
+    .introBannerTitleDesc {
+        margin: 0;
+        text-transform: uppercase;
+        font-size: 1.3rem;
+        @media screen and (min-width: $md_breakpoint) {
+            font-size: 2rem;
+        }
+        @media screen and (min-width: $lg_breakpoint) {
+            font-size: 2.5rem;
+        }
+    }
+}
 .maxNomineesBanner {
     display: flex;
     flex-direction: column;
